[package]
name = "substrate-account-filter"
version = "3.0.0"
authors = ["Gautam Dhameja <quasijatt@outlook.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/gautamdhameja/substrate-account-filter"

[features]
default = ['std']
std = [
    'parity-scale-codec/std',
    'sp-std/std',
    'sp-runtime/std',
    'frame-support/std',
    'sp-core/std',
    'sp-io/std',
    'frame-system/std',
    'serde',
]

[dependencies]
parity-scale-codec = { default-features = false, features = ['derive'], version = '2.1.1' }
serde = { features = ['derive'], optional = true, version = '1.0.101' }
sp-std = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-core = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
