[package]
name = "substrate-account-filter"
version = "3.0.0"
authors = ["Gautam Dhameja <quasijatt@outlook.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/gautamdhameja/substrate-account-filter"

[features]
default = ['std']
std = [
    'parity-scale-codec/std',
    'sp-std/std',
    'sp-runtime/std',
    'frame-support/std',
    'sp-core/std',
    'frame-system/std',
    'serde',
]

[dependencies]
parity-scale-codec = { default-features = false, features = ['derive'], version = '3.0.0' }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { features = ['derive'], optional = true, version = '1.0.101' }
sp-std = { version = "4.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }

