[package]
name = "substrate-account-filter"
version = "4.0.0"
authors = ["Gautam Dhameja <quasijatt@outlook.com>", "Artur-Yurii Korchynskyi <artur.yurii.korchynskyi@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/GoldenGateGGX/ggx-frames.git"

[features]
default = ['std']
std = [
    'parity-scale-codec/std',
    'sp-std/std',
    'sp-runtime/std',
    'frame-support/std',
    'sp-core/std',
    'frame-system/std',
    'serde',
]

[dependencies]
parity-scale-codec = { default-features = false, features = ['derive'], workspace = true }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
serde = { features = ['derive'], optional = true, workspace = true }
sp-std = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }

[dev-dependencies]
arrayvec = { workspace = true }
sp-io = { workspace = true, default-features = false }
